--- a/authors.html
+++ b/authors.html
@@ -29,10 +29,11 @@
     <link href="http://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
     <link href="http://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
+        <link href="http://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
     <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/style.css" type="text/css"/>
 
-        <link href="http://blog.justalfred.com/feeds/all.atom.xml" type="application/atom+xml" rel="alternate"
-              title="Just Alfred ATOM Feed"/>
+        <link href="http://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
+              title="Just Alfred RSS Feed"/>
 
 
 
@@ -53,6 +54,9 @@ Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
+                         <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
+                             About the&nbsp;Site
+                          </a></li>
                         <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
@@ -98,13 +102,13 @@ Just Alfred            </a>
                 <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                     <ul class="list-group " id="tags">
                         <li class="list-group-item tag-1">
-                            <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                                The Classical-Kwontum Interface
+                            <a href="http://blog.justalfred.com/tag/music.html">
+                                Music
                             </a>
                         </li>
                         <li class="list-group-item tag-1">
-                            <a href="http://blog.justalfred.com/tag/music.html">
-                                Music
+                            <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                                The Classical-Kwontum Interface
                             </a>
                         </li>
                         <li class="list-group-item tag-2">
