restart all this

--- a/renaissance.html
+++ b/renaissance.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="http://blog.justalfred.com/renaissance.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="keywords" content="The Classical-Kwontum Interface,Programming,Music,info" />
+        <meta name="keywords" content="The Classical-Kwontum Interface,Music,info" />
         <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/02/None.html I don’t think I have to remind my readers what renaissance means, but that is what is going on here. It has been well over a year since my last post, and much has changed. For one, I ..." />
 
     <!-- Enable latex plugin -->
@@ -54,14 +54,14 @@ Just Alfred            </a>
                          <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
                              About the&nbsp;Site
                           </a></li>
+                        <li >
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -106,8 +106,6 @@ Just Alfred            </a>
 
 <span class="label label-default">Tags</span>
 	<a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
-        /
-	<a href="http://blog.justalfred.com/tag/programming.html">Programming</a>
         /
 	<a href="http://blog.justalfred.com/tag/music.html">Music</a>
         /
@@ -200,11 +198,6 @@ it when I find the&nbsp;time.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -212,6 +205,11 @@ it when I find the&nbsp;time.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
