--- a/archives.html
+++ b/archives.html
@@ -58,13 +58,13 @@ Just Alfred            </a>
                              About the&nbsp;Site
                           </a></li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -232,11 +232,6 @@ Just Alfred            </a>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -244,6 +239,11 @@ Just Alfred            </a>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
