--- a/does-not-compute.html
+++ b/does-not-compute.html
@@ -13,7 +13,7 @@
 <link rel="canonical" href="http://blog.justalfred.com/does-not-compute.html">
 
         <meta name="author" content="Just Alfred" />
-        <meta name="keywords" content="The Classical-Kwontum Interface,Programming" />
+        <meta name="keywords" content="The Classical-Kwontum Interface,Code" />
         <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2013/10/does-not-compute.html Let’s talk about language. How amazing is it that using sounds or symbols, we can implant in another person’s mind an entirely new state? We can describe a place that person has never seen, we can construct ..." />
 
     <!-- Enable latex plugin -->
@@ -54,14 +54,14 @@ Just Alfred            </a>
                          <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
                              About the&nbsp;Site
                           </a></li>
+                        <li class="active">
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li class="active">
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -107,7 +107,7 @@ Just Alfred            </a>
 <span class="label label-default">Tags</span>
 	<a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
         /
-	<a href="http://blog.justalfred.com/tag/programming.html">Programming</a>
+	<a href="http://blog.justalfred.com/tag/code.html">Code</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -207,11 +207,6 @@ avoiding the typos and syntax errors whose importance he now&nbsp;understands.</
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -219,6 +214,11 @@ avoiding the typos and syntax errors whose importance he now&nbsp;understands.</
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
