--- a/form-and-its-function.html
+++ b/form-and-its-function.html
@@ -55,13 +55,13 @@ Just Alfred            </a>
                              About the&nbsp;Site
                           </a></li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -199,11 +199,6 @@ shopping list, or whether you just missed your&nbsp;turn&#8230;.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -211,6 +206,11 @@ shopping list, or whether you just missed your&nbsp;turn&#8230;.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
