--- a/introduction.html
+++ b/introduction.html
@@ -54,14 +54,14 @@ Just Alfred            </a>
                          <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
                              About the&nbsp;Site
                           </a></li>
+                        <li >
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -160,11 +160,6 @@ I&#8217;m looking forward to learning a lot in this&nbsp;process.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -172,6 +167,11 @@ I&#8217;m looking forward to learning a lot in this&nbsp;process.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
