--- a/toreamix.html
+++ b/toreamix.html
@@ -55,13 +55,13 @@ Just Alfred            </a>
                              About the&nbsp;Site
                           </a></li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/music.html">Music</a>
-                        </li>
-                        <li >
-                            <a href="http://blog.justalfred.com/category/programming.html">Programming</a>
                         </li>
                         <li >
                             <a href="http://blog.justalfred.com/category/science.html">Science</a>
@@ -208,11 +208,6 @@ place, but it&#8217;s there.  Start at 0:39 in the chant, 3:23 in the&nbsp;song
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
-                            <a href="http://blog.justalfred.com/tag/programming.html">
-                                Programming
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -220,6 +215,11 @@ place, but it&#8217;s there.  Start at 0:39 in the chant, 3:23 in the&nbsp;song
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/humans.html">
                                 Humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-4">
+                            <a href="http://blog.justalfred.com/tag/code.html">
+                                Code
                             </a>
                         </li>
                     </ul>
