--- a/introduction.html
+++ b/introduction.html
@@ -57,6 +57,9 @@ Just Alfred            </a>
                         <li >
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
+                        <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
@@ -160,6 +163,11 @@ I&#8217;m looking forward to learning a lot in this&nbsp;process.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -167,11 +175,6 @@ I&#8217;m looking forward to learning a lot in this&nbsp;process.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
