--- a/authors.html
+++ b/authors.html
@@ -61,6 +61,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
@@ -83,7 +86,7 @@ Just Alfred            </a>
         <div class="col-sm-9">
 
     <h1>Authors on Just Alfred</h1>
-        <li><a href="http://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (29)</li>
+        <li><a href="http://blog.justalfred.com/author/just-alfred.html">Just Alfred</a> (30)</li>
         </div>
         <div class="col-sm-3 well well-sm" id="sidebar">
 
@@ -117,6 +120,11 @@ Just Alfred            </a>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -124,11 +132,6 @@ Just Alfred            </a>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
