--- a/grad-school-allegory.html
+++ b/grad-school-allegory.html
@@ -58,6 +58,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
@@ -225,6 +228,11 @@ by their grace in martyrdom.  I still get shivers listening to this&nbsp;tablea
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -232,11 +240,6 @@ by their grace in martyrdom.  I still get shivers listening to this&nbsp;tablea
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
