--- a/guido.html
+++ b/guido.html
@@ -58,6 +58,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
@@ -192,6 +195,11 @@ assigned to those notes. Convenient. Thanks,&nbsp;Guido.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -199,11 +207,6 @@ assigned to those notes. Convenient. Thanks,&nbsp;Guido.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
