--- a/hypotheses-part-3.html
+++ b/hypotheses-part-3.html
@@ -58,6 +58,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
@@ -173,6 +176,11 @@ find the two are rather&nbsp;distant.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -180,11 +188,6 @@ find the two are rather&nbsp;distant.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
