--- a/nobels.html
+++ b/nobels.html
@@ -58,6 +58,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
@@ -178,6 +181,11 @@ their intellectual equals, then everyone pays a&nbsp;cost.  </p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -185,11 +193,6 @@ their intellectual equals, then everyone pays a&nbsp;cost.  </p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
