--- a/preconceptions-part-2.html
+++ b/preconceptions-part-2.html
@@ -58,6 +58,9 @@ Just Alfred            </a>
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
+                        <li >
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
@@ -277,6 +280,11 @@ you need to&nbsp;know.&#8221;</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -284,11 +292,6 @@ you need to&nbsp;know.&#8221;</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
