--- a/renaissance.html
+++ b/renaissance.html
@@ -57,6 +57,9 @@ Just Alfred            </a>
                         <li >
                             <a href="http://blog.justalfred.com/category/code.html">Code</a>
                         </li>
+                        <li >
+                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                        </li>
                         <li class="active">
                             <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
@@ -198,6 +201,11 @@ it when I find the&nbsp;time.</p>
                             </a>
                         </li>
                         <li class="list-group-item tag-3">
+                            <a href="http://blog.justalfred.com/tag/humans.html">
+                                humans
+                            </a>
+                        </li>
+                        <li class="list-group-item tag-3">
                             <a href="http://blog.justalfred.com/tag/info.html">
                                 info
                             </a>
@@ -205,11 +213,6 @@ it when I find the&nbsp;time.</p>
                         <li class="list-group-item tag-4">
                             <a href="http://blog.justalfred.com/tag/code.html">
                                 Code
-                            </a>
-                        </li>
-                        <li class="list-group-item tag-4">
-                            <a href="http://blog.justalfred.com/tag/humans.html">
-                                Humans
                             </a>
                         </li>
                     </ul>
