add footnote to ficino post

--- a/renaissance-role-models.html
+++ b/renaissance-role-models.html
@@ -192,6 +192,13 @@ Instead of lamenting this flaw in our wiring, let&#8217;s exploit it to better&n
 and observations here, but as an outsider to the domain, I don&#8217;t know which
 are well established and which have yet to be replicated. So I decided not
 to reference literature whose quality I don&#8217;t&nbsp;understand.)</p>
+<p>postscript 2016-05-28: After a couple months letting this stew, I think the
+call to action here shouldn&#8217;t be to pretty ourselves up. Not everyone wants to
+be the object of attention. We <strong>should</strong> try to embody the virtues we admire
+anyway. I don&#8217;t have a problem with that part. So the real call to action is
+just to notice those who choose to combine physical appeal with other virtues
+and not see it as distracting from those virtues. It&#8217;s ok for a professor
+to be hot in more ways than&nbsp;one.</p>
             </div>
             <!-- /.entry-content -->
         </article>
@@ -225,13 +232,13 @@ to reference literature whose quality I don&#8217;t&nbsp;understand.)</p>
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/science.html">
-                            Science
+                        <a href="http://blog.justalfred.com/tag/humans.html">
+                            humans
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
-                            humans
+                        <a href="http://blog.justalfred.com/tag/science.html">
+                            Science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
