new post: Discoveries (I)

--- a/index.html
+++ b/index.html
@@ -87,6 +87,13 @@ Just Alfred            </a>
         <div class="col-sm-9">
 
             <article>
+                <h2><a href="http://blog.justalfred.com/discoveries-i.html">Discoveries&nbsp;(I)</a></h2>
+                <div class="summary"><p>Reporting on my&nbsp;quest</p>
+                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/discoveries-i.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
                 <h2><a href="http://blog.justalfred.com/empathy-in-its-place.html">Empathy in its&nbsp;Place</a></h2>
                 <div class="summary"><p>Empathy. Mostly&nbsp;good.</p>
                     <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/empathy-in-its-place.html">more ...</a>
@@ -149,13 +156,6 @@ Just Alfred            </a>
                 </div>
             </article>
             <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/proust-in-the-park.html">Proust in the&nbsp;Park</a></h2>
-                <div class="summary"><p>In search of lost that&#8217;s the same dog from I hear a soprano, is she over there or whoa those people are&nbsp;naked</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/proust-in-the-park.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
 
         <ul class="pagination">
                 <li class="prev disabled"><a href="#">&laquo;</a></li>
@@ -167,6 +167,8 @@ Just Alfred            </a>
                             href="http://blog.justalfred.com/index3.html">3</a></li>
                     <li class=""><a
                             href="http://blog.justalfred.com/index4.html">4</a></li>
+                    <li class=""><a
+                            href="http://blog.justalfred.com/index5.html">5</a></li>
                 <li class="next"><a
                         href="http://blog.justalfred.com/index2.html">&raquo;</a></li>
         </ul>
@@ -188,13 +190,13 @@ Just Alfred            </a>
             <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
-                            humans
+                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                        <a href="http://blog.justalfred.com/tag/humans.html">
+                            humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
@@ -208,13 +210,13 @@ Just Alfred            </a>
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                        <a href="http://blog.justalfred.com/tag/info.html">
+                            info
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/info.html">
-                            info
+                        <a href="http://blog.justalfred.com/tag/code.html">
+                            Code
                         </a>
                     </li>
                 </ul>
